fix: replace structs RegisterInput and LoginInput
