# internal/delivery/http/models/users_response.go
@@ -13,3 +13,16 @@ type UserResponse struct {
 func UserToUserResponse(user models.User) UserResponse {
 	return UserResponse{Id: user.Id, Login: user.Login, Email: user.Email, Name: user.Name, Surname: user.Surname}
 }
+
+type RegisterUserInput struct {
+	Login    string `json:"login" binding:"required" example:"user1"`
+	Password string `json:"password" binding:"required" example:"hashedpassword"`
+	Email    string `json:"email" binding:"required" example:"user@example.com"`
+	Name     string `json:"name" binding:"required" example:"John"`
+	Surname  string `json:"surname" example:"Doe"`
+}
+
+type LoginInput struct {
+	Login    string `json:"login" binding:"required" example:"user1"`
+	Password string `json:"password" binding:"required" example:"hashedpassword"`
+}
